# TP5_Robotic

./: .gitignore  README.md  pyproject.toml  report_tp5.tex  setup_tp5.bash
src/bcr_arm/bcr_arm_description/: CMakeLists.txt  package.xml
src/bcr_arm/bcr_arm_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  ros2_control.urdf.xacro
src/bcr_arm/bcr_arm_description/urdf/mech/: bcr_arm_mech.urdf.xacro
src/bcr_arm/bcr_arm_description/urdf/robots/: bcr_arm.urdf.xacro
src/bcr_arm/bcr_arm_description/urdf/sensors/: depth_camera.urdf.xacro
src/bcr_arm/bcr_arm_gazebo/: CMakeLists.txt  package.xml
src/bcr_arm/bcr_arm_gazebo/config/: ros2_controllers.yaml
src/bcr_arm/bcr_arm_gazebo/launch/: bcr_arm.gazebo.launch.py
src/bcr_arm/bcr_arm_gazebo/scripts/: bcr_kinematics.py  classifier.py  dgcnn_model.py  download_weights.py  forward_kinematics.py  ik_solver.py  kinematics_nn.py  perception.py  pick_and_place.py  predict_fk.py  segmentation.py  test_arm_movement.py  test_pipeline_standalone.py  trajectory.py
src/bcr_arm/bcr_arm_gazebo/worlds/: pick_scene.world
