<?xml version="1.0"?>
<package format="3">
  <name>bcr_arm_description</name>
  <version>0.1.0</version>
  <description>Description URDF du BCR Arm</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
