<?xml version="1.0"?>
<package format="3">
  <name>bcr_arm_gazebo</name>
  <version>0.1.0</version>
  <description>Simulation Gazebo du BCR Arm</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <exec_depend>bcr_arm_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
